--- a/octoprint_filamentreload/templates/filamentreload_settings.jinja2
+++ b/octoprint_filamentreload/templates/filamentreload_settings.jinja2
@@ -24,4 +24,16 @@ Define the pin used by your sensor and the debounce timing for false positive pr
             </select>
         </div>
     </div>
+    <div class="control-group">
+        <label class="control-label">{{ _('After pause GCODE:') }}</label>
+        <div class="controls">
+            <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentreload.after_pause_gcode"></textarea>
+        </div>
+    </div>
+    <div class="control-group">
+        <label class="control-label">{{ _('Filament detected GCODE:') }}</label>
+        <div class="controls">
+            <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentreload.filament_detected_gcode"></textarea>
+        </div>
+    </div>
 </form>
