Move gcode hook to resume

--- a/octoprint_filamentreload/templates/filamentreload_settings.jinja2
+++ b/octoprint_filamentreload/templates/filamentreload_settings.jinja2
@@ -31,9 +31,9 @@ Define the pin used by your sensor and the debounce timing for false positive pr
         </div>
     </div>
     <div class="control-group">
-        <label class="control-label">{{ _('Filament detected GCODE:') }}</label>
+        <label class="control-label">{{ _('After resume GCODE:') }}</label>
         <div class="controls">
-            <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentreload.filament_detected_gcode"></textarea>
+            <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentreload.after_resume_gcode"></textarea>
         </div>
     </div>
 </form>
