--- a/octoprint_filamentreload/templates/filamentreload_settings.jinja2
+++ b/octoprint_filamentreload/templates/filamentreload_settings.jinja2
@@ -25,6 +25,15 @@ Define the pin used by your sensor and the debounce timing for false positive pr
         </div>
     </div>
     <div class="control-group">
+        <label class="control-label">{{ _('Board Pin Mode:') }}</label>
+        <div class="controls" data-toggle="tooltip" title="{{ _('RPi pins numbered in Board mode or BCM mode?') }}">
+           <select class="select-mini" data-bind="value: settings.plugins.filamentreload.mode">
+                <option value=0>{{ _('Board Mode') }}</option>
+                <option value=1>{{ _('BCM Mode') }}</option>
+        </select>
+        </div>
+    </div>
+    <div class="control-group">
         <label class="control-label">{{ _('After pause GCODE:') }}</label>
         <div class="controls">
             <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentreload.after_pause_gcode"></textarea>
