--- a/octoprint_filamentreload/templates/filamentreload_settings.jinja2
+++ b/octoprint_filamentreload/templates/filamentreload_settings.jinja2
@@ -1,23 +1,21 @@
-<h4>{{ _('Filament Sensor') }}</h4>
-Define the pin used by your sensor and the debounce timing for false positive prevention.
-<br>
+<h4>{{ _('Filament Sensor Reloaded') }}</h4>
 <form class="form-horizontal">
     <div class="control-group">
         <label class="control-label">{{ _('Pin:') }}</label>
-        <div class="controls" data-toggle="tooltip" title="{{ _('Which GPIO pin your switch is attached to') }}">
+        <div class="controls" data-toggle="tooltip" title="{{ _('Which Raspberry Pi GPIO pin your switch is attached to (-1 disables the plugin)') }}">
             <input type="number" step="any" min="0" class="input-mini text-right" data-bind="value: settings.plugins.filamentreload.pin">
         </div>
     </div>
     <div class="control-group">
         <label class="control-label">{{ _('Debounce Time:') }}</label>
-        <div class="controls" data-toggle="tooltip" title="{{ _('The amount of time a signal needs to stay constant to be considered valid') }}">
+        <div class="controls" data-toggle="tooltip" title="{{ _('When a sensor state change happens, wait for this amount of time to wait for the signal to stabilize.') }}">
             <input type="number" step="any" min="0" class="input-mini text-right" data-bind="value: settings.plugins.filamentreload.bounce">
             <span class="add-on">ms</span>
         </div>
     </div>
     <div class="control-group">
         <label class="control-label">{{ _('Switch Type:') }}</label>
-        <div class="controls" data-toggle="tooltip" title="{{ _('Whether the sensor should trip when the switch goes HIGH or LOW, Normally Open is LOW when filament is present, and Normally Closed is HIGH when filament is present') }}">
+        <div class="controls" data-toggle="tooltip" title="{{ _('Whether the sensor should trip when the switch goes HIGH or LOW, Normally Open is LOW when filament is present, and Normally Closed is HIGH when filament is present.') }}">
             <select class="select-mini" data-bind="value: settings.plugins.filamentreload.switch">
                 <option value=0>{{ _('Normally Open') }}</option>
                 <option value=1>{{ _('Normally Closed') }}</option>
@@ -34,15 +32,16 @@ Define the pin used by your sensor and the debounce timing for false positive pr
         </div>
     </div>
     <div class="control-group">
-        <label class="control-label">{{ _('After pause GCODE:') }}</label>
+        <label class="control-label">{{ _('Out of filament GCODE:') }}</label>
         <div class="controls">
-            <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentreload.after_pause_gcode"></textarea>
+            <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentreload.no_filament_gcode"></textarea>
         </div>
     </div>
     <div class="control-group">
-        <label class="control-label">{{ _('After resume GCODE:') }}</label>
-        <div class="controls">
-            <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentreload.after_resume_gcode"></textarea>
+        <div class="controls" data-toggle="tooltip" title="{{ _('Beware that for some printers, pausing is incompatible with M600 (Filament change pause) as both will move the print head and it can resume at a different position as it paused.') }}">
+            <label class="checkbox">
+                <input type="checkbox" data-bind="checked: settings.plugins.filamentreload.pause_print"> {{ _('Pause print when out of filament') }}
+            </label>
         </div>
     </div>
 </form>
