added feature for sending GCODE only once.

--- a/octoprint_filamentreload/templates/filamentreload_settings.jinja2
+++ b/octoprint_filamentreload/templates/filamentreload_settings.jinja2
@@ -44,4 +44,12 @@
             </label>
         </div>
     </div>
+    <div class="control-group">
+        <div class="controls" data-toggle="tooltip" title="{{ _('With this option checked, the plugin will ignore subsequent reports of out of filament until the print is resumed again.') }}">
+            <label class="checkbox">
+                <input type="checkbox" data-bind="checked: settings.plugins.filamentreload.send_gcode_only_once"> {{ _('Send GCODE only once when out of filament.') }}
+            </label>
+        </div>
+    </div>
+
 </form>
