--- a/octoprint_filamentreload/templates/filamentreload_navbar.jinja2
+++ b/octoprint_filamentreload/templates/filamentreload_navbar.jinja2
@@ -1,6 +1,6 @@
 
-<a class="pull-right" data-bind=" " style="display: none;float: left;">
-  <i class="fas fa-circle-notch" data-bind="d"> </i>
+<a id="filament_indicator" class="pull-right" data-bind=" " style="display: none;float: left;">
+  <i class="fa fa-circle-o-notch" data-bind="d"> </i>
 </a>
 
 <!-- /ko -->
