--- a/octoprint_filamentreload/static/css/filamentreload.css
+++ b/octoprint_filamentreload/static/css/filamentreload.css
@@ -1,3 +1,3 @@
-#navbar_plugin_filament_indicator.present i{color:#00FF00}
-#navbar_plugin_filament_indicator.empty i{color:#FF8C00}
-#navbar_plugin_filament_indicator.unknown i{color:grey}
+#filament_indicator.present i{color:#00FF00}
+#filament_indicator.empty i{color:#FF8C00}
+#filament_indicator.unknown i{color:grey}
