--- a/octoprint_filamentreload/templates/filamentreload_navbar.jinja2
+++ b/octoprint_filamentreload/templates/filamentreload_navbar.jinja2
@@ -1,6 +1,3 @@
-
-<a id="filament_indicator" class="pull-right" data-bind=" " style="display: none;float: left;">
-  <i class="fa fa-circle-o-notch unknown" data-bind=""> </i>
+<a id="filament_indicator" class="pull-right unknow" data-bind=" " style="float: left;">
+  <i class="fa fa-circle-o-notch" data-bind=""> </i>
 </a>
-
-<!-- /ko -->
