--- a/octoprint_filamentreload/templates/filamentreload_navbar.jinja2
+++ b/octoprint_filamentreload/templates/filamentreload_navbar.jinja2
@@ -1,3 +1,3 @@
-<a id="filament_indicator" class="pull-right unknow" data-bind=" " style="float: left;">
+<a id="filament_indicator" class="pull-right" data-bind=" " style="float: left;">
   <i class="fa fa-circle-o-notch" data-bind=""> </i>
 </a>
