--- a/octoprint_filamentreload/templates/filamentreload_settings.jinja2
+++ b/octoprint_filamentreload/templates/filamentreload_settings.jinja2
@@ -32,6 +32,15 @@
         </div>
     </div>
     <div class="control-group">
+        <label class="control-label">{{ _('Board Pin Resistor Mode:') }}</label>
+        <div class="controls" data-toggle="tooltip" title="{{ _('RPi pins uses pullup or pull down resistor?') }}">
+           <select class="select-mini" data-bind="value: settings.plugins.filamentreload.pullup">
+                <option value=0>{{ _('Pull up Resistor') }}</option>
+                <option value=1>{{ _('Pull down Resistor') }}</option>
+        </select>
+        </div>
+    </div>
+    <div class="control-group">
         <label class="control-label">{{ _('Out of filament GCODE:') }}</label>
         <div class="controls">
             <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentreload.no_filament_gcode"></textarea>
