--- a/octoprint_filamentmatrix/templates/filamentmatrix_settings.jinja2
+++ b/octoprint_filamentmatrix/templates/filamentmatrix_settings.jinja2
@@ -1,22 +1,22 @@
-<h4>{{ _('Filament Sensor Reloaded') }}</h4>
+<h4>{{ _('Filament Sensor Matrix') }}</h4>
 <form class="form-horizontal">
     <div class="control-group">
         <label class="control-label">{{ _('Pin:') }}</label>
         <div class="controls" data-toggle="tooltip" title="{{ _('Which Raspberry Pi GPIO pin your switch is attached to (-1 disables the plugin)') }}">
-            <input type="number" step="any" min="0" class="input-mini text-right" data-bind="value: settings.plugins.filamentreload.pin">
+            <input type="number" step="any" min="0" class="input-mini text-right" data-bind="value: settings.plugins.filamentmatrix.pin">
         </div>
     </div>
     <div class="control-group">
         <label class="control-label">{{ _('Debounce Time:') }}</label>
         <div class="controls" data-toggle="tooltip" title="{{ _('When a sensor state change happens, wait for this amount of time to wait for the signal to stabilize.') }}">
-            <input type="number" step="any" min="0" class="input-mini text-right" data-bind="value: settings.plugins.filamentreload.bounce">
+            <input type="number" step="any" min="0" class="input-mini text-right" data-bind="value: settings.plugins.filamentmatrix.bounce">
             <span class="add-on">ms</span>
         </div>
     </div>
     <div class="control-group">
         <label class="control-label">{{ _('Switch Type:') }}</label>
         <div class="controls" data-toggle="tooltip" title="{{ _('Whether the sensor should trip when the switch goes HIGH or LOW, Normally Open is LOW when filament is present, and Normally Closed is HIGH when filament is present.') }}">
-            <select class="select-mini" data-bind="value: settings.plugins.filamentreload.switch">
+            <select class="select-mini" data-bind="value: settings.plugins.filamentmatrix.switch">
                 <option value=0>{{ _('Normally Open') }}</option>
                 <option value=1>{{ _('Normally Closed') }}</option>
             </select>
@@ -25,7 +25,7 @@
     <div class="control-group">
         <label class="control-label">{{ _('Board Pin Mode:') }}</label>
         <div class="controls" data-toggle="tooltip" title="{{ _('RPi pins numbered in Board mode or BCM mode?') }}">
-           <select class="select-mini" data-bind="value: settings.plugins.filamentreload.mode">
+           <select class="select-mini" data-bind="value: settings.plugins.filamentmatrix.mode">
                 <option value=0>{{ _('Board Mode') }}</option>
                 <option value=1>{{ _('BCM Mode') }}</option>
         </select>
@@ -34,20 +34,20 @@
     <div class="control-group">
         <label class="control-label">{{ _('Out of filament GCODE:') }}</label>
         <div class="controls">
-            <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentreload.no_filament_gcode"></textarea>
+            <textarea rows="4" class="block" data-bind="value: settings.plugins.filamentmatrix.no_filament_gcode"></textarea>
         </div>
     </div>
     <div class="control-group">
         <div class="controls" data-toggle="tooltip" title="{{ _('Beware that for some printers, pausing is incompatible with M600 (Filament change pause) as both will move the print head and it can resume at a different position as it paused.') }}">
             <label class="checkbox">
-                <input type="checkbox" data-bind="checked: settings.plugins.filamentreload.pause_print"> {{ _('Pause print when out of filament') }}
+                <input type="checkbox" data-bind="checked: settings.plugins.filamentmatrix.pause_print"> {{ _('Pause print when out of filament') }}
             </label>
         </div>
     </div>
     <div class="control-group">
         <div class="controls" data-toggle="tooltip" title="{{ _('With this option checked, the plugin will ignore subsequent reports of out of filament until the print is resumed again.') }}">
             <label class="checkbox">
-                <input type="checkbox" data-bind="checked: settings.plugins.filamentreload.send_gcode_only_once"> {{ _('Send GCODE only once when out of filament.') }}
+                <input type="checkbox" data-bind="checked: settings.plugins.filamentmatrix.send_gcode_only_once"> {{ _('Send GCODE only once when out of filament.') }}
             </label>
         </div>
     </div>
